@@ -1,3 +1,7 @@
+2007-03-15  John W. Eaton  <jwe@octave.org>
+
+	* variables.cc (F__lock_global__): Delete.
+
 2007-03-14  John W. Eaton  <jwe@octave.org>
 
 	* graphics.cc: New file.
